--- a/sh_portfolio/css/layout/_contents.scss
+++ b/sh_portfolio/css/layout/_contents.scss
@@ -8,26 +8,41 @@
         &__btn {
           @include onFlex(center, center);
           li {
+            position: relative;
             text-align: center;
+            padding: rem(10) 0;
+            &::after {
+              content: '';
+              position: absolute;
+              left: 0;
+              bottom: 0;
+              width: 0;
+              height: rem(2);
+              background-color: #a2dcc7;
+              transition: width 0.3s ease-in;
+            }
             &.on {
+              &::after {
+                width: 100%;
+              }
               .tab__btn {
-                color: #ffffff;
-                background-color: #a2dcc7;
+                // color: #ffffff;
+                // background-color: #a2dcc7;
               }
             }
             & + li {
-              margin-left: rem(10);
+              margin-left: rem(30);
             }
           }
           &.nav {
             border-top: rem(1) solid #dddddd;
             border-bottom: rem(1) solid #dddddd;
-            padding: rem(10) 0;
           }
         }
         &__contents {
           // height: rem(380);
-          margin: rem(80) 0;
+          margin: rem(30) 0;
+          padding: 0 3%;
           .tab-area__contents {
             margin-top: rem(30);
           }
@@ -44,35 +59,6 @@
         padding: 0 rem(10);
       }
       &__contents {
-        .contents {
-          // @include onFlex(flex-start, center);
-          width: calc(100% / 3);
-
-          // min-width: rem(320);
-          // min-height: rem(250);
-          text-align: left;
-          margin-right: 1%;
-          margin-bottom: rem(15);
-          overflow: hidden;
-          .img-area {
-            height: rem(330);
-            padding: rem(10);
-            background-color: #dddddd;
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center 0;
-            }
-          }
-          .title {
-            font-size: rem(18);
-            font-weight: 700;
-            text-align: left;
-            margin-top: rem(10);
-          }
-        }
-
         .view__btn {
           position: relative;
           display: block;
@@ -91,6 +77,64 @@
             color: #fff;
             background-color: #67c2a2;
           }
+        }
+      }
+    }
+    .sort {
+      &-area {
+        &__btn {
+          @include onFlex(center, center);
+          li {
+            height: rem(30);
+            color: #222222;
+            line-height: rem(30);
+            background-color: #ffffff;
+            border-radius: 5px;
+            padding: 0 rem(10);
+            cursor: pointer;
+            &.on {
+              color: #ffffff;
+              background-color: #a2dcc7;
+            }
+          }
+        }
+        &__contents {
+          @include onFlex(flex-start, flex-start);
+          flex-wrap: wrap;
+          margin-top: rem(25);
+        }
+      }
+      &__btn {
+        cursor: pointer;
+      }
+      &__contents {
+        width: calc((100% / 3) - 1%);
+        min-width: rem(250);
+        min-height: rem(250);
+        text-align: left;
+        margin-right: 1%;
+        margin-bottom: rem(15);
+        overflow: hidden;
+        .img-area {
+          height: rem(330);
+          padding: rem(10);
+          background-color: #dddddd;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center 0;
+          }
+        }
+        h4.title {
+          font-size: rem(18);
+          font-weight: 700;
+          text-align: left;
+          margin-top: rem(10);
+          margin-bottom: 0;
+        }
+        &:last-child {
+          margin-right: 0;
         }
       }
     }
@@ -229,6 +273,11 @@
     transition-property: none;
   }
 }
+.msg-area {
+  textarea {
+    border: rem(1) solid #dddddd;
+  }
+}
 
 @media (max-width: 1024px) {
   .ly-contents__section {
@@ -253,15 +302,18 @@
   .ly-wrap .ly-footer {
     padding: rem(20) 5%;
   }
+  .ly-wrap .sort__contents {
+    width: 49%;
+  }
 }
 
 @media (max-width: 850px) {
   .gnb {
     display: none;
   }
-  .ly-contents__section .contents-area .tab-area__btn li + li {
-    margin-left: 0;
-  }
+  // .ly-contents__section .contents-area .tab-area__btn li + li {
+  //   margin-left: 0;
+  // }
   .ly-contents__section .contents-area .tab__contents .img-area {
     height: rem(300);
   }
@@ -270,6 +322,9 @@
 
   .ly-wrap .skills-area .skill-name:hover {
     top: 0;
+  }
+  .ly-wrap .sort__contents {
+    width: 100%;
   }
 }
 
